# Marker

./: .gitignore  AGENTS.md  README.md  components.json  flake.nix  index.html  marker.nix  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-release-version.mjs  bump-release-version.test.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/permissions/: get-file-metadata.toml  scan-markdown-file-tree.toml
src-tauri/src/: file_tree.rs  main.rs  menu.rs
src/components/: ErrorBoundary.tsx
src/components/Editor/: Editor.tsx  Menu.tsx  Publish.tsx
src/components/Editor/NodeViews/: CodeBlockView.tsx  TableView.tsx  types.ts
src/components/Editor/extensions/: table-of-contents.ts
src/components/Editor/extensions/CodeBlockLowlight/: index.ts
src/components/Main/: AddProject.tsx  Apps.tsx
src/components/Project/: App.tsx  Selector.tsx
src/components/Project/FileTree/: File.tsx  FileTreeLabel.tsx  Root.tsx  Tree.tsx
src/components/Settings/: AppSettings.tsx  CommandMenu.tsx
src/components/ui/: sonner.tsx
src/hooks/: useEditor.ts
src/store/: appStore.ts
src/styles/: globals.css
src/utils/: appStore.ts  contextMenu.ts  fileTree.derive.test.ts  fileTree.ts  fileTreeSort.test.ts  fileTreeSort.ts  getFileMeta.ts  getImgUrl.ts  markdown.ts  removePath.ts  tauri.ts  types.ts
src/utils/markdownToHtml/marked/: index.ts
